--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-katex": "^3.1.0"
   },
   "devDependencies": {
+    "@types/node": "^25.0.6",
     "@types/react": "19.2.7",
+    "@types/react-dom": "^19.2.3",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
