--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,7 @@ node_modules/
 
 # dotenv environment variables file
 .env
-.env.local
+# .env.local
 .env.development.local
 .env.test.local
 .env.production.local
